--- a/style.css
+++ b/style.css
@@ -43,6 +43,89 @@ html {
     margin: 0;
 }
 
+//導覽列
+/* nav */
+
+#gotop {
+    display: none;
+    width: 60px;
+    position: fixed;
+    right: 20px;
+    bottom: 20px;
+    cursor: pointer;
+}
+
+.nav {
+    width: 100%;
+    height: 48px;
+    box-shadow: 0 0 8px rgba(0, 0, 0, .7);
+    position: fixed;
+    top: 0;
+    z-index: 1;
+    background-color: #3e3440;
+}
+
+.nav ul {
+    display: inline-block;
+    margin: 0;
+    padding: 0;
+}
+
+.nav li {
+    height: 100%;
+    margin: 0;
+    padding: 0;
+    list-style: none;
+    display: inline-block;
+    line-height: 48px;
+}
+
+.nav-link {
+    margin: 0;
+    padding: 13.5px 20px;
+    text-decoration: none;
+    color: #a0a0a0;
+}
+
+.nav-link:hover {
+    color: #d8d8d8;
+}
+
+.nav .current a {
+    color: #d8d8d8;
+    font-weight: 500;
+}
+
+@media screen and (max-width: 750px) {
+    #menu {
+        display: block;
+    }
+    .nav ul {
+        width: 120px;
+        padding: 0;
+        position: absolute;
+        right: 0;
+        background-color: #3e3440;
+        border-radius: 5px;
+    }
+    .nav li {
+        display: none;
+        margin: 0;
+    }
+    .nav-link {
+        display: block;
+        padding: 0;
+        text-align: center;
+    }
+    .nav .current a {
+        background: none;
+        color: #d8d8d8;
+    }
+    .nav ul:hover li {
+        display: block;
+    }
+}
+
 #head {
     padding-top: 50px;
     display: block;
